--- a/src/button/Button.css
+++ b/src/button/Button.css
@@ -7,7 +7,6 @@
     color: #333;
     font-size: 24px;
     font-weight: bold;
-    padding: 10px 20px;
     text-align: center;
     text-decoration: none;
     user-select: none;
@@ -22,4 +21,22 @@
     background-color: #bfbfbf;
     border-color: #999;
     color: #000;
+}
+
+#wide-button {
+    width: 130px;
+}
+
+#ac {
+    background-color: #f44336;
+    color: #fff;
+}
+
+#ac:hover {
+    background-color: #d32f2f;
+}
+
+#equal-button{
+    background-color: #3659f4;
+    color: #fff;
 }
