--- a/src/calculator/Calculator.css
+++ b/src/calculator/Calculator.css
@@ -9,10 +9,13 @@ h1{
   flex-direction: column;
   justify-content: center;
   padding: 20px;
-  border: 1px solid #ccc;
+  border: 1px solid darkgray;
   border-radius: 4px;
   width: 300px;
   margin: 10vh auto;
+  border-radius: 20px;
+	background-color: lightgray;
+	box-shadow: 0px 0px 12px 12px darkgray inset;
 }
 
 .button-row {
@@ -25,7 +28,6 @@ button {
   padding: 10px;
   margin: 5px;
   border: none;
-  background-color: #eee;
   border-radius: 4px;
   cursor: pointer;
 }
