--- a/src/calculator/Calculator.css
+++ b/src/calculator/Calculator.css
@@ -1,8 +1,17 @@
-h1{
-  margin-top: 5vh;
+h1 {
+  width: 20vw;
+  font-size: 4vmin;
+  font-weight: bold;
   text-align: center;
-  color: #964747;
+  margin: 4vh auto;
+  color: #4d4d4d;
+  text-shadow: 2px 2px #e6e6e6;
+  background-color: #f2f2f2;
+  border-radius: 20px;
+  padding: 20px;
+  box-shadow: 0px 3px 3px #c7c7c7;
 }
+
 
 .calculator {
   display: flex;
